@@ -2,6 +2,7 @@ ImageViewer Release Notes
 Author: Steve Corbett
 
 Version 2.2 [TODO] - Image sets
+  #43 - Fix null pointer exception in thumbnail pregeneration
   #39 - Image set editor: allow setting transient and locked
   #38 - Re-query for extra panels on reloadUI()
   #37 - Dynamic main menu based on browse mode
